[package]
name = "ekilibri"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ekilibri"
path = "src/bin/server.rs"

[[bin]]
name = "command"
path = "src/bin/command.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0" , features = ["derive"] }
toml = "0.8.19"
rand = "0.8.5"
clap = { version = "4.5.16", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
thiserror = "1.0.64"
